# kube-test

./: .gitignore
wai/: LICENSE  README.md  kubewai.cabal  stack.yaml
wai/scenario1/: pod.yaml  service.yaml
wai/scenario2/: deployment.yaml  service.yaml
wai/src/: Main.hs
yesod/: stack.yaml
yesod/config/: routes
yesod/scenario3/: config.yaml
yesod/src/Handler/: Home.hs
