name:                kubewai
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psibi/wai#readme
license:             BSD3
license-file:        LICENSE
author:              Sibi Prabakaran
maintainer:          sibi@psibi.in
copyright:           Sibi Prabakaran
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sample-wai
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wai, http-types, warp, hostname, bytestring
